2019-07-04  Keith Marshall  <keith@users.osdn.me>

	Correct -Wformat handling of "%hhn" for __mingw_format__.

	* mingw32/mingw32-gcc4.xml: Update all packages to release 8.2.0-4
	* common/issue.log mingw32/issue.log: Update accordingly.

2019-04-29  Keith Marshall  <keith@users.osdn.me>

	Correct a package name typo.

	* mingw32/mingw32-gcc4.xml (libgnat-6.dll): Tarball is actually
	.tar.xz, but was specified as .tar.lzma; correct it, and republish.
	* common/issue.log mingw32/issue.log: Update accordingly.

2019-02-11  Keith Marshall  <keith@users.osdn.me>

	Publish binutils-2.32 package set.

	* mingw32/mingw32-binutils.xml (binutils-bin, binutils-dev)
	(binutils-lic, binutils-info, binutils-man, binutils-lang): Add
	release references for version 2.32-1
	* common/issue.log mingw32/issue.log: Update accordingly.

2019-02-07  Keith Marshall  <keith@users.osdn.me>

	Correct a typo, of omission, for obsolete gcc-4.8.1.

	* mingw32/mingw32-gcc4.xml (gcc-c++-4.8.1-5-doc): Add a missing
	'download tarname="none"' attribute to the release specification.
	* common/issue.log mingw32/issue.log: Update accordingly.

2019-01-22  Keith Marshall  <keith@users.osdn.me>

	Publish MinGW.org WSL-5.2.1 package set.

	* mingw32/mingw32-runtime.xml (mingwrt-5.2.1-dev, mingwrt-5.2.1-dll)
	(mingwrt-5.2.1-lic, mingwrt-5.2.1-man, libmingwex-5.2.1-dll-2)
	(libmingwex-5.2.1-dev, w32api-5.2.1-dev): Add references.
	(wsl-features): New post-installation hook package; specify it.
	(wsl-features-20190122-1-cfg): Add reference; define action.
	* common/issue.log mingw32/issue.log: Update accordingly.

2019-01-14  Keith Marshall  <keith@users.osdn.me>

	Republish binutils-2.31.1 and gcc-8.2.0 package sets.

	* mingw32/mingw32-binutils.xml (binutils-bin, binutils-dev)
	(binutils-lic, binutils-info, binutils-man, binutils-lang): Add
	release references for version 2.31.1-2; this is a rebuilt package, to
	correct a defect in the mkstemp() function from mingwrt-5.2
