@@ -66,6 +66,7 @@
       <component class="dev">
         <requires eq="mingwrt-%-mingw32-dll.tar" />
         <requires eq="wsl-features-*-mingw32-cfg.tar" />
+        <release tarname="mingwrt-5.2.2-mingw32-dev.tar.xz" />
         <release tarname="mingwrt-5.2.1-mingw32-dev.tar.xz" />
         <release tarname="mingwrt-5.2-mingw32-dev.tar.xz" />
         <release tarname="mingwrt-5.1.1-mingw32-dev.tar.xz" />
@@ -74,6 +75,7 @@
       </component>
 
       <component class="dll">
+        <release tarname="mingwrt-5.2.2-mingw32-dll.tar.xz" />
         <release tarname="mingwrt-5.2.1-mingw32-dll.tar.xz" />
         <release tarname="mingwrt-5.2-mingw32-dll.tar.xz" />
         <release tarname="mingwrt-5.1.1-mingw32-dll.tar.xz" />
@@ -82,6 +84,7 @@
       </component>
 
       <component class="lic">
+        <release tarname="mingwrt-5.2.2-mingw32-lic.tar.xz" />
         <release tarname="mingwrt-5.2.1-mingw32-lic.tar.xz" />
         <release tarname="mingwrt-5.2-mingw32-lic.tar.xz" />
         <release tarname="mingwrt-5.1.1-mingw32-lic.tar.xz" />
@@ -90,6 +93,7 @@
       </component>
 
       <component class="man">
+        <release tarname="mingwrt-5.2.2-mingw32-man.tar.xz" />
         <release tarname="mingwrt-5.2.1-mingw32-man.tar.xz" />
         <release tarname="mingwrt-5.2-mingw32-man.tar.xz" />
         <release tarname="mingwrt-5.1.1-mingw32-man.tar.xz" />
@@ -117,6 +121,9 @@
 
       <component class="dev">
         <requires eq="mingwrt-%-mingw32-dev.tar" />
+        <release tarname="libmingwex-5.2.2-mingw32-dev.tar.xz">
+          <requires eq="libmingwex-%-mingw32-dll-2.tar" />
+        </release>
         <release tarname="libmingwex-5.2.1-mingw32-dev.tar.xz">
           <requires eq="libmingwex-%-mingw32-dll-2.tar" />
         </release>
@@ -135,6 +142,7 @@
       </component>
 
       <component class="dll">
+        <release tarname="libmingwex-5.2.2-mingw32-dll-2.tar.xz" />
         <release tarname="libmingwex-5.2.1-mingw32-dll-2.tar.xz" />
         <release tarname="libmingwex-5.2-mingw32-dll-2.tar.xz" />
         <release tarname="libmingwex-5.1.1-mingw32-dll-0.tar.xz" />
@@ -162,6 +170,7 @@
       <licence tarname="mingwrt-%-mingw32-lic.tar.%" />
 
       <component class="dev">
+        <release tarname="w32api-5.2.2-mingw32-dev.tar.xz" />
         <release tarname="w32api-5.2.1-mingw32-dev.tar.xz" />
         <release tarname="w32api-5.2-mingw32-dev.tar.xz" />
         <release tarname="w32api-5.1.1-mingw32-dev.tar.xz" />
